proc-macros/tests/ui/incorrect/sub/sub_no_item.stderr
error: Missing argument `item`
 --> $DIR/sub_no_item.rs:6:4
  |
6 |     #[subscription(name = "sub")]
  |       ^^^^^^^^^^^^
